# HORNET

./: .env.example  .gitignore  README.md  REBUILD.md  ROCKY_LINUX.md  pyproject.toml
.github/workflows/: tests.yml
config/: models.yaml  settings.yaml
docs/: INSTALL.md  MANUAL.md  ROCKY_LINUX.md
hornet/: __init__.py  __main__.py  cli.py  config.py  session.py
hornet/agents/: __init__.py  executor.py  math_agent.py  orchestrator.py  planner.py  prediction_agent.py  registry.py  sql_agent.py  stats_agent.py
hornet/db/: __init__.py  column_hints.py  connection.py  csv_import.py  schema.py  shooting_cols.py  team_aliases.py
hornet/llm/: __init__.py  model_manager.py  ollama_client.py
hornet/tools/: __init__.py  registry.py
scripts/: bootstrap-ubuntu.sh  bootstrap_from_zero.sh  build_schema_cache.py  generate_installer.py  import_csv.py  install_hornet.py  make_copy_zip.sh  package_for_deploy.py  test_install_hornet.py  verify_setup.sh
tests/: conftest.py  test_fixture_databases.py  test_gap_coverage.py  test_planner.py  test_regression_routing.py  test_schema_catalog.py  test_sql_agent.py
tests/fixtures/: __init__.py  build_sports_dbs.py
