[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hornet"
version = "0.1.0"
description = "Local multi-agent sports analytics (NBA/NFL/NHL) via Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
hornet = "hornet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hornet*"]

[tool.ruff]
line-length = 100
target-version = "py310"
